==> Edo-Franzi/uKOS-X/Ports/Targets/Pico2_rp2350/Variant_Test/Runtime/init.c <==
#include	"uKOS.h"
#include	"linker.h"

static	void	local_GPIO_Configuration(void) {

	REG(RESETS)->RESET &= ~(RESETS_RESET_DONE_IO_BANK0 | RESETS_RESET_DONE_PADS_BANK0);
	while ((REG(RESETS)->RESET_DONE & (RESETS_RESET_DONE_IO_BANK0 | RESETS_RESET_DONE_PADS_BANK0)) != (RESETS_RESET_DONE_IO_BANK0 | RESETS_RESET_DONE_PADS_BANK0)) { ; }

// ISO=0, outputs

	REG(PADS_BANK0)->GPIO11 &= ~PADS_BANK0_GPIO11_ISO;
	REG(PADS_BANK0)->GPIO12 &= ~PADS_BANK0_GPIO12_ISO;
	REG(PADS_BANK0)->GPIO13 &= ~PADS_BANK0_GPIO13_ISO;
	REG(PADS_BANK0)->GPIO25 &= ~PADS_BANK0_GPIO25_ISO;

	REG(IO_BANK0)->GPIO11_CTRL = IO_BANK0_GPIO11_CTRL_FUNCSEL_SIOB_PROC_11;
	REG(IO_BANK0)->GPIO12_CTRL = IO_BANK0_GPIO12_CTRL_FUNCSEL_SIOB_PROC_12;
	REG(IO_BANK0)->GPIO13_CTRL = IO_BANK0_GPIO13_CTRL_FUNCSEL_SIOB_PROC_13;
	REG(IO_BANK0)->GPIO25_CTRL = IO_BANK0_GPIO25_CTRL_FUNCSEL_SIOB_PROC_25;

	REG(SIO)->GPIO_OE_SET	   = (1u<<BLED_s) | (1u<<BLED_0) | (1u<<BLED_1) | (1u<<BLED_2);

// ISO=0, inputs

	REG(PADS_BANK0)->GPIO21	   = PADS_BANK0_GPIO21_IE | PADS_BANK0_GPIO21_SCHMITT | PADS_BANK0_GPIO21_PUE;
	REG(IO_BANK0)->GPIO21_CTRL = IO_BANK0_GPIO21_CTRL_FUNCSEL_SIOB_PROC_21;

// Configure for UART0:
// - GPIO16 (TX): out, no pull-up (OD = 0), Schmitt on
// - GPIO17 (RX): inp, IE = 1, activate the Schmitt, no pull-up
// - GPIO16 -> UART0 TX, GPIO17 -> UART0 RX
// - (FUNCSEL = F1 for these UART0 pins)

	REG(PADS_BANK0)->GPIO16	   = PADS_BANK0_GPIO16_SCHMITT;
	REG(PADS_BANK0)->GPIO17	   = PADS_BANK0_GPIO17_IE | PADS_BANK0_GPIO17_SCHMITT;
	REG(IO_BANK0)->GPIO16_CTRL = IO_BANK0_GPIO16_CTRL_FUNCSEL_UART0_TX;
	REG(IO_BANK0)->GPIO17_CTRL = IO_BANK0_GPIO17_CTRL_FUNCSEL_UART0_RX;

// Configure for UART1:
// - GPIO4 (TX): out, no pull-up (OD = 0), Schmitt on
// - GPIO5 (RX): inp, IE = 1, activate the Schmitt, no pull-up
// - GPIO4 -> UART1 TX, GPIO5 -> UART1 RX
// - (FUNCSEL = F1 for these UART0 pins)

	REG(PADS_BANK0)->GPIO4	   = PADS_BANK0_GPIO4_SCHMITT;
	REG(PADS_BANK0)->GPIO5	   = PADS_BANK0_GPIO5_IE | PADS_BANK0_GPIO1_SCHMITT;
	REG(IO_BANK0)->GPIO4_CTRL  = IO_BANK0_GPIO4_CTRL_FUNCSEL_UART1_TX;
	REG(IO_BANK0)->GPIO5_CTRL  = IO_BANK0_GPIO5_CTRL_FUNCSEL_UART1_RX;
}

static	void	local_USB_Configuration(void) {

	REG(RESETS)->RESET &= ~RESETS_RESET_USBCTRL;
	while ((REG(RESETS)->RESET_DONE & RESETS_RESET_DONE_USBCTRL) == 0x0u) { ; }

	REG(USB)->MAIN_CTRL &= ~USB_MAIN_CTRL_PHY_ISO;
	REG(USB)->MAIN_CTRL |= USB_MAIN_CTRL_CONTROLLER_EN;
}

static	void	local_MPU_Configuration(void) {

	SET_MPU8_INDEX(KMPU_FLASH_ATTR, KMPU_RAM_CACHE_ATTR, KMPU_RAM_NOT_CACHE_ATTR, KMPU_PERIPH_ATTR, 0u, 0u, 0u, 0u, 0u);

	#if (defined(PRIVILEGED_USER_S))
	SET_MPU8_REGION(0u,	ST_FLASH_INT_0,			EN_FLASH_INT_0,			KMPU_EXECUTABLE,		KMPU_R_ALL,  0u, KMPU_INNER_SHAREABLE);
	SET_MPU8_REGION(1u,	ST_RAM_INT_0_OS,		EN_RAM_INT_0_OS,		KMPU_EXECUTABLE,		KMPU_RW_PRI, 1u, KMPU_INNER_SHAREABLE);
	SET_MPU8_REGION(2u,	ST_RAM_INT_0,			EN_RAM_INT_0,			KMPU_EXECUTABLE,		KMPU_RW_ALL, 1u, KMPU_INNER_SHAREABLE);
	SET_MPU8_REGION(3u,	ST_RAM_INT_0_SHARED,	EN_RAM_INT_0_SHARED,	KMPU_EXECUTABLE,		KMPU_RW_ALL, 2u, KMPU_NOT_SHAREABLE);
	SET_MPU8_REGION(4u,	ST_PERIPH_SOC,			EN_PERIPH_SOC,			KMPU_NOT_EXECUTABLE,	KMPU_RW_PRI, 3u, KMPU_NOT_SHAREABLE);
	SET_MPU8_REGION(5u,	ST_EXTERNAL,			EN_EXTERNAL,			KMPU_NOT_EXECUTABLE,	KMPU_RW_ALL, 3u, KMPU_NOT_SHAREABLE);
	SET_MPU8_REGION(6u,	ST_PERIPH_CORE,			EN_PERIPH_CORE,			KMPU_NOT_EXECUTABLE,	KMPU_RW_PRI, 3u, KMPU_NOT_SHAREABLE);

	#else
	SET_MPU8_REGION(0u,	ST_FLASH_INT_0,			EN_FLASH_INT_0,			KMPU_EXECUTABLE,		KMPU_R_ALL,  0u, KMPU_INNER_SHAREABLE);
	SET_MPU8_REGION(1u,	ST_RAM_INT_0,			EN_RAM_INT_0,			KMPU_EXECUTABLE,		KMPU_RW_ALL, 1u, KMPU_INNER_SHAREABLE);
	#endif
}
